Ensure there's an 'overlap' of 20px when scrolling vertically
Former-commit-id: 9396c9db86c94522967c0a076b4de4ea7fcbc95e
Former-commit-id: d503eba8bffd2c4ff47c394a902596364be6d881

--- a/OEBPS/readk.it/sass/styles.scss
+++ b/OEBPS/readk.it/sass/styles.scss
@@ -136,11 +136,13 @@ and (max-device-width : 1024px)  {
 .#{$namespace}-wrapper {
     /* Firefox *almost* works if we comment out the next line  and use height: 100%; instead */
     position: absolute;
+    /* The next two lines allow for an "overlap" when scrolling a page vertically */
+    top: 20px;
+    overflow: visible !important;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    overflow: auto;
     z-index: 1;
 }
 
